# Cheetah-Software

./: .gitignore  .gitmodules  CMakeLists.txt  config.h.cmake
common/: CMakeLists.txt
common/FootstepPlanner/: CMakeLists.txt
common/include/: cppTypes.h
common/include/ControlParameters/: ControlParameters.h
common/include/Controllers/: LegController.h  StateEstimatorContainer.h
common/include/Dynamics/: Cheetah3.h  FloatingBaseModel.h  Quadruped.h
common/include/Math/: Interpolation.h  MathUtilities.h
common/include/SimUtilities/: GamepadCommand.h  SimulatorMessage.h  VisualizationData.h  ti_boardcontrol.h
common/include/SparseCMPC/: SparseCMPC.h
common/include/Utilities/: BSplineBasic.h  ParamHandler.hpp  PeriodicTask.h  SharedMemory.h  Timer.h  pseudoInverse.h  save_file.h  utilities.h
common/src/ControlParameters/: ControlParameters.cpp
common/src/Controllers/: LegController.cpp
common/src/SimUtilities/: ti_boardcontrol.cpp
common/src/SparseCMPC/: SparseCMPC.cpp  SparseCMPC_Math.cpp
common/src/Utilities/: ParamHandler.cpp  PeriodicTask.cpp  Utilities_print.cpp  save_file.cpp  utilities.cpp
common/test/: test_yaml.cpp
config/: default-user-parameters-file.yaml
rc_test/: CMakeLists.txt
robot/: CMakeLists.txt
robot/include/: HardwareBridge.h  RobotRunner.h  SimulationBridge.h
robot/include/rt/: rt_ethercat.h  rt_rc_interface.h  rt_serial.h  rt_spi.h
robot/src/: HardwareBridge.cpp  JPosInitializer.cpp  RobotRunner.cpp  SimulationBridge.cpp  main_helper.cpp
robot/src/rt/: rt_ethercat.cpp  rt_rc_interface.cpp  rt_sbus.cpp  rt_spi.cpp
sim/: CMakeLists.txt
sim/include/: DrawList.h  GameController.h  Graphics3D.h  RobotInterface.h  SimControlPanel.h  Simulation.h
sim/src/: DrawList.cpp  GameController.cpp  Graphics3D.cpp  JoystickTest.cpp  JoystickTest.ui  MiniCheetahDebug.cpp  RobotInterface.cpp  SimControlPanel.cpp  SimControlPanel.ui  Simulation.cpp  main.cpp  obj_loader.cpp
user/JPos_Controller/: CMakeLists.txt  JPos_Controller.cpp
user/MIT_Controller/: CMakeLists.txt
user/MIT_Controller/Controllers/BalanceController/: BalanceController.cpp  BalanceController.hpp  BalanceControllerVBL.cpp  BalanceControllerVBL.hpp  BalanceControllerWrapper.cpp  BalanceControllerWrapper.h  ReferenceGRF.hpp
user/MIT_Controller/Controllers/VisionMPC/: CMakeLists.txt  VisionMPC_interface.cpp  VisionRobotState.cpp  VisionRobotState.h  VisionSolverMPC.cpp  VisionSolverMPC.h
user/MIT_Controller/Controllers/WBC/WBIC/: CMakeLists.txt  WBIC.cpp  WBIC.hpp
user/MIT_Controller/Controllers/WBC_Ctrl/: CMakeLists.txt  WBC_Ctrl.cpp  WBC_Ctrl.hpp
user/MIT_Controller/Controllers/WBC_Ctrl/LocomotionCtrl/: LocomotionCtrl.cpp  LocomotionCtrl.hpp
user/MIT_Controller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  RobotState.cpp  RobotState.h  SolverMPC.cpp  SolverMPC.h  convexMPC_interface.cpp  convexMPC_util.h
user/MIT_Controller/FSM_States/: ControlFSM.cpp  ControlFSM.h  FSM_State.cpp  FSM_State.h  FSM_State_BalanceStand.cpp  FSM_State_ImpedanceControl.cpp  FSM_State_JointPD.cpp  FSM_State_Locomotion.cpp  FSM_State_Passive.cpp  FSM_State_RecoveryStand.cpp  FSM_State_StandUp.cpp  FSM_State_Vision.h  SafetyChecker.cpp
user/MiniCheetahSpi_Controller/: CMakeLists.txt
